# transforms

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  requirements-jax_transforms-test.txt  ruff.toml
.github/workflows/: ci.yaml
config/: config.yaml
jax_transforms/: __init__.py  alr.py  expanded_softmax.py  ilr.py  normalized_exponential.py  normalized_gamma.py  stickbreaking.py  util.py
jax_transforms/tests/: test_stan_transforms.py  test_transforms.py
simplex_transforms/jax/: expectation.py
simplex_transforms/stan/: __init__.py
target_densities/: DirichletSymmetric.stan
targets/: Dirichlet.stan  dirichlet.stan
targets/dirichlet/: data.stan  dirichlet_data.stan  dirichlet_functions.stan  dirichlet_model_log_simplex.stan  dirichlet_model_simplex.stan
targets/functions/: dirichlet.stanfunction  dirichlet.stanfunctions  multi-logit-normal.stanfunction  multi-logit-normal.stanfunctions
targets/multi-logit-normal/: data.stan  model_log_simplex.stan  model_simplex.stan  multi-logit-normal_data.stan  multi-logit-normal_function.stan  multi-logit-normal_functions.stan  multi-logit-normal_model_log_simplex.stan  multi-logit-normal_model_simplex.stan
tests/: test_stan_transforms.py
tests/jax/: test_expectation.py  test_transforms.py
tests/stan/: test_stan_transforms.py
tests/workflow/: test_config.yaml
transforms/ALR/: ALR_functions.stan  ALR_parameters_log_simplex.stan  parameters_simplex.stan
transforms/ExpandedSoftmax/: ExpandedSoftmax_functions.stan  ExpandedSoftmax_parameters_log_simplex.stan  parameters_log_simplex.stan  parameters_simplex.stan
transforms/ILR/: ILR_functions.stan  ILR_parameters_log_simplex.stan  ILR_parameters_simplex.stan
transforms/NormalizedExponential/: NormalizedExponential_functions.stan  NormalizedExponential_parameters_log_simplex.stan  NormalizedExponential_parameters_simplex.stan
transforms/StanStickbreaking/: StanStickbreaking_functions.stan  StanStickbreaking_parameters_log_simplex.stan  StanStickbreaking_parameters_simplex.stan  functions.stan
transforms/StickbreakingAngular/: StickbreakingAngular_functions.stan  functions.stan  parameters_log_simplex.stan  parameters_simplex.stan
transforms/StickbreakingLogistic/: StickbreakingLogistic_functions.stan  StickbreakingLogistic_parameters_log_simplex.stan  StickbreakingLogistic_parameters_simplex.stan  functions.stan
transforms/StickbreakingNormal/: StickbreakingNormal_functions.stan  StickbreakingNormal_parameters_log_simplex.stan  StickbreakingNormal_parameters_simplex.stan  functions.stan
transforms/StickbreakingPowerLogistic/: StickbreakingPowerLogistic_functions.stan  parameters_log_simplex.stan  (+1 more)
workflow/: Snakefile
(+72 files in other folders)
